fix: harden Windows import result contract